# dvc-example

./: .pre-commit-config.yaml  Makefile  kaggle.json  pyproject.toml
rep_pycon/: LICENSE  Makefile  README.md  setup.py
rep_pycon/docs/: Makefile  conf.py  index.rst  make.bat
