[tool.poetry]
name = "dvc-example"
version = "0.1.0"
description = ""
authors = ["Your Name <yourname@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8.1"

[tool.poetry.dev-dependencies]
pre-commit = "^3.3.1"
flake8 = "^6.0.0"
black = "^23.3.0"
interrogate = "^1.5.0"

[build-system]
requires = ["poetry>=1.1.0"]
build-backend = "poetry.masonry.api"
